# heatwaves

./: .buildinfo  README.html  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
PH/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
PH/_sources/notebooks/measuring-heatwaves/: heatwaves-in-philippines.ipynb
PH/notebooks/air-pollution/: air-pollution.html
PH/notebooks/measuring-heatwaves/: heatwaves-in-philippines.html
PH/notebooks/socio-economic-indicators/: census.html
_sources/: README.md
notebooks/: heatwaves-in-philippines.ipynb  nasa-apod.html  phil_green_cover_plot.ipynb  world-bank-api.html  world-bank-package.html
notebooks/air-pollution/: README.md
notebooks/measuring-heatwaves/: calculate-heat-index.ipynb  calculate-heatwaves-incidence.ipynb  calculate-max-temperature.ipynb  phil_green_cover_plot.ipynb  phil_plot.ipynb  philippines-heatwaves-incidence.ipynb  read-gldas.ipynb  weather-tomorrow.io.ipynb
src/heatwaves/: __init__.py  weather.py  weatherFunctions.py
